--- a/src/css/index.css
+++ b/src/css/index.css
@@ -2,4 +2,6 @@
   height: 100px;
   width: 100px;
   background-color: red;
+  background-image: url("../images/0304.jpeg");
+  background-size: cover;
 }
