--- a/src/scss/test1.scss
+++ b/src/scss/test1.scss
@@ -1,5 +1,7 @@
-.box3{
+.box3 {
     height: 200px;
     width: 200px;
     background-color: hotpink;
+    background-image: url("../images/banner4.jpg");
+    background-size: cover;
 }
