--- a/src/scss/test2.scss
+++ b/src/scss/test2.scss
@@ -2,4 +2,6 @@
     height: 200px;
     width: 200px;
     background-color: orange;
+    background-image: url("../images/logo.png");
+    background-size: cover;
 }
